--- a/package.json
+++ b/package.json
@@ -1,30 +1,46 @@
 {
-  "name": "interpolate-webpack-plugin",
-  "version": "0.2.1",
-  "description": "Interpolate predefined variables to assets files",
+  "name": "@c4605/interpolate-webpack-plugin",
+  "version": "1.0.1",
   "main": "lib/index.js",
-  "author": "c4605 <bolasblack@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "prepublishOnly": "yarn build",
+    "build": "tsc --build .",
+    "watch": "tsc --watch -p .",
+    "test": "jest ./src"
+  },
   "devDependencies": {
-    "@types/escape-string-regexp": "^1.0.0",
-    "@types/execa": "^0.9.0",
-    "@types/find-up": "^2.1.1",
+    "@commitlint/config-conventional": "^8.1.0",
     "@types/flat": "^0.0.28",
-    "@types/node": "^10.5.8",
-    "@types/webpack": "^4.4.9",
+    "@types/jest": "^24.0.17",
+    "@types/node": "^12.7.1",
+    "@types/poi": "^12.5.0",
+    "@types/webpack": "^4.32.1",
     "@types/webpack-sources": "^0.1.5",
-    "typescript": "^3.0.1"
+    "@typescript-eslint/eslint-plugin": "^1.13.0",
+    "@typescript-eslint/parser": "^1.13.0",
+    "commitlint": "^8.1.0",
+    "coveralls": "^3.0.6",
+    "eslint": "^6.1.0",
+    "eslint-config-prettier": "^6.0.0",
+    "git-hook-pure": "^1.2.2",
+    "jest": "^24.8.0",
+    "jest-cli": "^24.8.0",
+    "lint-staged": "^9.2.1",
+    "poi": "^12.7.2",
+    "prettier": "^1.18.2",
+    "ts-jest": "^24.0.2",
+    "typescript": "^3.5.3",
+    "webpack": "^4.39.1"
   },
-  "peerDependencies": {
-    "webpack": "<= 4"
-  },
-  "optionalDependencies": {},
   "dependencies": {
-    "escape-string-regexp": "^1.0.5",
-    "execa": "^0.10.0",
-    "find-up": "^3.0.0",
+    "@c4605/toolconfs": "^4.4.1",
+    "escape-string-regexp": "^2.0.0",
+    "execa": "^2.0.3",
+    "find-up": "^4.1.0",
     "flat": "^4.1.0",
-    "isbinaryfile": "^3.0.3",
-    "webpack-sources": "^1.1.0"
-  }
+    "isbinaryfile": "^4.0.2",
+    "webpack-sources": "^1.4.3"
+  },
+  "prettier": "@c4605/toolconfs/prettierrc"
 }
