--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "@c4605/interpolate-webpack-plugin",
-  "version": "1.0.2",
+  "version": "2.0.0",
   "main": "lib/index.js",
+  "engines": {
+    "node": ">=13.2.0"
+  },
   "license": "MIT",
   "scripts": {
     "prepublishOnly": "yarn build",
@@ -10,37 +13,34 @@
     "test": "jest ./src"
   },
   "devDependencies": {
-    "@commitlint/config-conventional": "^8.1.0",
-    "@types/flat": "^0.0.28",
-    "@types/jest": "^24.0.17",
-    "@types/node": "^12.7.1",
-    "@types/poi": "^12.5.0",
-    "@types/webpack": "^4.32.1",
-    "@types/webpack-sources": "^0.1.5",
-    "@typescript-eslint/eslint-plugin": "^1.13.0",
-    "@typescript-eslint/parser": "^1.13.0",
-    "commitlint": "^8.1.0",
-    "coveralls": "^3.0.6",
-    "eslint": "^6.1.0",
-    "eslint-config-prettier": "^6.0.0",
-    "git-hook-pure": "^1.2.2",
-    "jest": "^24.8.0",
-    "jest-cli": "^24.8.0",
-    "lint-staged": "^9.2.1",
-    "poi": "^12.7.2",
-    "prettier": "^1.18.2",
-    "ts-jest": "^24.0.2",
-    "typescript": "^3.5.3",
-    "webpack": "^4.39.1"
+    "@commitlint/config-conventional": "^17.6.3",
+    "@types/flat": "^5.0.2",
+    "@types/jest": "^29.5.1",
+    "@types/node": "^20.1.3",
+    "@types/webpack-sources": "^3.2.0",
+    "@typescript-eslint/eslint-plugin": "^5.59.5",
+    "@typescript-eslint/parser": "^5.59.5",
+    "commitlint": "^17.6.3",
+    "coveralls": "^3.1.1",
+    "css-loader": "^6.7.3",
+    "eslint": "^8.40.0",
+    "eslint-config-prettier": "^8.8.0",
+    "git-hook-pure": "^3.2.1",
+    "html-webpack-plugin": "^5.5.1",
+    "jest": "^29.5.0",
+    "jest-cli": "^29.5.0",
+    "lint-staged": "^13.2.2",
+    "prettier": "^2.8.8",
+    "ts-jest": "^29.1.0",
+    "typescript": "^5.0.4",
+    "webpack": "^5.82.1"
   },
   "dependencies": {
-    "@c4605/toolconfs": "^4.4.1",
-    "escape-string-regexp": "^2.0.0",
-    "execa": "^2.0.3",
-    "find-up": "^4.1.0",
-    "flat": "^4.1.0",
-    "isbinaryfile": "^4.0.2",
-    "webpack-sources": "^1.4.3"
+    "@c4605/toolconfs": "^5.2.2",
+    "execa": "^7.1.1",
+    "find-up": "^6.3.0",
+    "flat": "^5.0.2",
+    "isbinaryfile": "^5.0.0"
   },
   "prettier": "@c4605/toolconfs/prettierrc"
 }
