--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,9 @@
 {
   "extends": "@c4605/toolconfs/tsconfig-node",
   "compilerOptions": {
+    "module": "ESNext",
+    "suppressImplicitAnyIndexErrors": false,
+    "skipLibCheck": true,
     "outDir": "lib"
   },
   "exclude": ["./lib"]
